Hydrogen / Helium: Fixed Offcanvas toggle visibility setting (fixes #1630)

--- a/themes/helium/common/scss/helium/sections/_offcanvas.scss
+++ b/themes/helium/common/scss/helium/sections/_offcanvas.scss
@@ -55,7 +55,7 @@
             display: block;
         }
     } @else {
-        display: block;
+        display: block !important;
     }
 }
 
